fix overflow for long lines in diff view, issue 1

--- a/public/styles.less
+++ b/public/styles.less
@@ -600,11 +600,14 @@ table.commitsList, table.authorList {
     font-size: 0.9em;
   }
 
-  /* The styles for inline comments are slightly different than general comments -- they have no left border.
-   */
-  .file .comment, .file .commentForm {
-    width: 99%;
-    border-left: 0;
+  .file {
+    overflow: auto;
+
+    // The styles for inline comments are slightly different than general comments -- they have no left border.
+    .comment, .commentForm {
+      width: 849px;
+      border-left: 0;
+    }
   }
 
   .comment, .commentForm {
